--- a/src/components/managment/menuEdit/menuCategoryItems/style.module.css
+++ b/src/components/managment/menuEdit/menuCategoryItems/style.module.css
@@ -20,7 +20,7 @@
     display: inline-block;
     border-radius: 10px;
     box-shadow: 1px #636363;
-    border: 1px  solid #F8F8F8;
+    /* border: 1px  solid #F8F8F8; */
     background: none;
 }
 
