--- a/src/components/landingPage/nav/style.module.css
+++ b/src/components/landingPage/nav/style.module.css
@@ -100,6 +100,7 @@
         border: none; 
         display: inline-block;
         padding: 0;
+        padding-right: 10px;
         margin: 0;
         border-radius: 4px;
         font-size: 20px; 
