--- a/src/components/landingPage/nav/forgotPassword/style.module.css
+++ b/src/components/landingPage/nav/forgotPassword/style.module.css
@@ -9,6 +9,10 @@
     text-align: center;
     margin-bottom: 20px;
   }
+  .logo > img {
+    width: 150px;
+    height: 50px;
+  } 
   
   .form {
     margin-top: 20px;
