--- a/src/components/landingPage/nav/signUp/style.module.css
+++ b/src/components/landingPage/nav/signUp/style.module.css
@@ -9,7 +9,10 @@
     text-align: center;
     margin-bottom: 20px;
   }
-  
+  .logo > img {
+    width: 150px;
+    height: 50px;
+  }
   .form {
     padding: 0 40px;
   }
